# dummy_project

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  main.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: phase.md
.github/MASTER_PROMPTS/: TEMPLATE_PROMPT.md
.github/workflows/: build.yml  copilot_autofix_request.yml
_codeql_build_dir/: CMakeCache.txt  DummyLux  Makefile  cmake_install.cmake  dummy_project_ai
docs/: AUTOFIX_EXAMPLE.md  COPILOT_AGENT_USAGE.md  QUICK_REFERENCE.md  TEST_SCENARIOS.md
src/: main.cpp
